[package]
name = "cloud_zip"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
zip = "0.5"          # For working with ZIP files
serde = { version = "1.0", features = ["derive"] }  # For serializing and deserializing
serde_cbor = "0.11"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65.0"
tokio = { version = "1", features = ["full"] }
